--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,15 +17,19 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  freezed_annotation: ^2.2.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  json_annotation: ^4.7.0
 
 dev_dependencies:
   build_runner: ^2.3.2
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.3.0
   hive_generator: ^2.0.0
+  json_serializable: ^6.5.4
 
 flutter:
   uses-material-design: true
