--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   json_annotation: ^4.7.0
+  retrofit: ^3.3.1
 
 dev_dependencies:
   build_runner: ^2.3.2
@@ -30,6 +31,7 @@ dev_dependencies:
   freezed: ^2.3.0
   hive_generator: ^2.0.0
   json_serializable: ^6.5.4
+  retrofit_generator: ^4.2.0
 
 flutter:
   uses-material-design: true
