--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,10 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.1
   freezed_annotation: ^2.2.0
+  get_it: ^7.2.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  injectable: ^2.1.0
   json_annotation: ^4.7.0
   retrofit: ^3.3.1
 
@@ -30,6 +32,7 @@ dev_dependencies:
     sdk: flutter
   freezed: ^2.3.0
   hive_generator: ^2.0.0
+  injectable_generator: ^2.1.2
   json_serializable: ^6.5.4
   retrofit_generator: ^4.2.0
 
