--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
     sdk: flutter
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  exchange_rates:
+    path: ./packages/exchange_rates
 
 dev_dependencies:
   build_runner: ^2.3.2
